# foxfeet

./: README.md  foxfeet.cabal  package-lock.json  package.json
app/: Main.hs
src/: Foxfeet.hs  index.ts  options.ts  utils.ts
src/Foxfeet/: Feed.hs  Http.hs  Main.hs  Opt.hs  TagSoup.hs
src/Foxfeet/Feed/: Discover.hs  Preview.hs
test/: Main.hs  options.test.ts  utils.test.ts
test/Foxfeet/: FeedSpec.hs
test/Foxfeet/Feed/: DiscoverSpec.hs  PreviewSpec.hs
test/data/: atom.xml  feed.json  index.html
test/data/feeds/: rss.xml
test/data/pages/: index.html
