cabal-version: 3.8

name: foxfeet
version: 0.1.0.0

common common
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Foxfeet
    Foxfeet.Feed
    Foxfeet.Opt
  other-modules:
    Paths_foxfeet
  autogen-modules:
    Paths_foxfeet
  build-depends:
    , aeson
    , base >= 4.18.3.0 && < 4.19
    , bytestring
    , http-client
    , http-client-tls
    , http-types
    , network-uri
    , optparse-applicative
    , tagsoup
    , text

executable foxfeet
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    , base
    , foxfeet

test-suite foxfeet-test
  import: common
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , base
    , foxfeet
